# nkbase

./: .gitignore  CMakeLists.txt  README.txt
cmake/: FindCppUnit.cmake  FindIlmBase.cmake
src/: CMakeLists.txt
src/nkbase/: BinaryOps.h  CMakeLists.txt  Compare.h  Compare.hpp  Defs.h  Exceptions.h  String.h  String.hpp  Tolerance.cpp  Tolerance.h  Types.h
unittest/: CMakeLists.txt  TestBinaryOps.cpp  TestString.cpp  main.cpp
